fix overflow-x on iPhone 6

--- a/www/css/customIRCELINE.css
+++ b/www/css/customIRCELINE.css
@@ -141,3 +141,6 @@ fieldset[disabled] .btn-primary.active {
           font-size: 1.2em;
         }
 }
+.modal-body{
+    overflow-x: auto;
+}
